  doesn't affect to the mail...déjà vu ? or didn't finish yet? The affected version is 5.4 only.
- [BUG FIX] FileMaker_FX class couldn't apply the "script" and "query" keyed value for "load" 
  (or "read") operation in a context definition when setting search criteria. The affected version
  is 5.4 only.

Ver.5.4 (August 24, 2016)
- You don't have to call INTERMediator.construct() anymore. If you want to do anything before page
  generating, describe "INTERMediatorOnPage.doBeforeConstruct = function(){..};" on any valid place.
  The node having the id attribute "nonsupportmessage" will disappear after page generating. If you
  require to the another id value, you can set it into params.php as the value "$nonSupportMessageId".
- "IN" operator in SQL db can be accepted with DB_PDO class. The value should be an array of itemized
  values.
- If the automatic calling to construct method doesn't requre, descirbe the below in doBeforeConstruct
  or prior to that: INTERMediatorOnPage.isAutoConstruct = false;
- Creating Cross Table for PDO. It contains 3 contexts for column, row and value cells.
  See the sample Samples/Practices/crosstable.html.
- The "post-query-stored" key in context of the definition file is introduced. It will be specified
  a method name, ant the method has to be define in the INTERMediatorOnPage object with one variable
  for referring context object. It will be called after query and stored values in context.
- The second "option" parameter of IM_Entry function can have the key "local-context" as the array of
  "key" and "value" keyed elements. These affect as the initial values of relevant local context value.
- The variable "$valuesForLocalContext" in params.php supplies initial values for local context.
  The value of this variable has to be an associated array with key and value.
- Improve setting search criteria when using FileMaker Server 12 or later to use the same fields for