@@ -373,6 +373,15 @@ class DB_FMS_Test_Common extends PHPUnit_Framework_TestCase
         $this->assertEquals(15, count($result));
         $this->assertEquals(3654, $totalCount);
         $this->assertEquals('1670032', $result[0]['f3']);
+
+        $this->dbProxySetupForAccess('postalcode', 1000000);
+        $this->db_proxy->dbSettings->setDataSource(array(array('records' => 1000000, 'name' => 'postalcode', 'key' => 'id', 'query' => array(array('field' => 'f3', 'value' => '167', 'operator' => 'bw'), array('field' => 'f9', 'value' => '天沼', 'operator' => 'neq')))));
+        $this->db_proxy->dbSettings->addExtraSortKey('id', 'asc');
+        $result = $this->db_proxy->readFromDB('postalcode');
+        $totalCount = $this->db_proxy->getTotalCount('postalcode');
+        $this->assertEquals(14, count($result));
+        $this->assertEquals(3654, $totalCount);
+        $this->assertEquals('1670021', $result[0]['f3']);
     }
 
     public function testQuery_findPostalCodeWithQueryKeyAndSearchCriteria()
